[gd_scene load_steps=7 format=3 uid="uid://bxc5u2d1r3rws"]

[ext_resource type="Script" uid="uid://b3njjpsn1hmo2" path="res://scenes/dialogs/load_savegame_dialog.gd" id="1_61a8w"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="2_h8cpk"]
[ext_resource type="StyleBox" uid="uid://bmyh6yvafukya" path="res://assets/button_style.tres" id="3_mac3t"]
[ext_resource type="Script" uid="uid://rm5me2dmoo2g" path="res://addons/fontawesome/FontAwesomeButton.gd" id="4_rai2m"]
[ext_resource type="PackedScene" uid="uid://dytjnya7i6c47" path="res://scenes/dialogs/select_quantity_dialog.tscn" id="5_srnyq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25hsw"]
bg_color = Color(0.505882, 0.701961, 0.854902, 0.839216)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="LoadSavegameDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -286.5
offset_right = 285.5
offset_bottom = 286.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61a8w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_25hsw")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Content/VBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load a saved game"
horizontal_alignment = 1

[node name="ButtonCancel" type="Button" parent="Content/VBoxContainer/Top"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Close"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_h8cpk")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_mac3t")
theme_override_styles/hover = ExtResource("3_mac3t")
theme_override_styles/pressed = ExtResource("3_mac3t")
theme_override_styles/disabled = ExtResource("3_mac3t")
theme_override_styles/focus = ExtResource("3_mac3t")
text = ""
script = ExtResource("4_rai2m")
icon_size = 32
icon_name = "xmark"

[node name="ListSavegames" type="ItemList" parent="Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(1, 1, 0, 1)
theme_override_colors/font_selected_color = Color(1, 1, 0, 1)
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="Bottom" type="HBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonDelete" type="Button" parent="Content/VBoxContainer/Bottom"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Delete"
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_h8cpk")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_mac3t")
theme_override_styles/hover = ExtResource("3_mac3t")
theme_override_styles/pressed = ExtResource("3_mac3t")
theme_override_styles/disabled = ExtResource("3_mac3t")
theme_override_styles/focus = ExtResource("3_mac3t")
text = ""
script = ExtResource("4_rai2m")
icon_size = 32
icon_name = "trash"

[node name="ButtonLoad" type="Button" parent="Content/VBoxContainer/Bottom"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Load"
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_h8cpk")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_mac3t")
theme_override_styles/hover = ExtResource("3_mac3t")
theme_override_styles/pressed = ExtResource("3_mac3t")
theme_override_styles/disabled = ExtResource("3_mac3t")
theme_override_styles/focus = ExtResource("3_mac3t")
text = ""
script = ExtResource("4_rai2m")
icon_size = 32
icon_name = "upload"

[node name="SelectQuantityDialog" parent="." instance=ExtResource("5_srnyq")]
visible = false
layout_mode = 1

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="Content/VBoxContainer/Top/ButtonCancel" to="." method="_on_button_close_pressed"]
[connection signal="item_clicked" from="Content/VBoxContainer/ListSavegames" to="." method="_on_list_savegames_item_clicked"]
[connection signal="item_selected" from="Content/VBoxContainer/ListSavegames" to="." method="_on_list_savegames_item_selected"]
[connection signal="pressed" from="Content/VBoxContainer/Bottom/ButtonDelete" to="." method="_on_button_delete_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Bottom/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="quantity" from="SelectQuantityDialog" to="." method="_on_select_quantity_dialog_quantity"]
